[package]
name = "safe_file"
version = "0.1.0"
edition = "2021"
authors = ["Люцько Сергей ouhguy@gmail.com"]
description = "Кроссплатформенная библиотека безопасной работы с файлами (шифрование + ЭЦП)"
license = "MIT"
repository = "https://github.com/LeetManSup/safe_file"

[dependencies]
once_cell   = "1.19"
rand_core   = "0.6"
tempfile    = "3.10"
thiserror   = "1.0"
zeroize     = "1.7"